--- a/components/hero/hero.module.css
+++ b/components/hero/hero.module.css
@@ -161,5 +161,9 @@ line-height: 11.899px;
     .left_colum_father{
         margin-top: 50px;
     }
-    
+     .scrollDiv{
+
+        margin-top:30px;
+       
+    }
 }
